# portfolio

./: .gitignore  README.md
autonomous-market-intelligence/: README.md
customerchurn/: README.md  pyproject.toml
customerchurn/docs/: report.md
customerchurn/logs/: results.csv
customerchurn/notebooks/: customerchurn.ipynb
customerchurn/src/: constants.py  main.py
customerchurn/src/data/: datamanager.py  datapipelineprovider.py  datasource.py  modeldatasource.py  resultmnanager.py
customerchurn/src/models/: modelanalyzer.py  modelcomparator.py  modelfactory.py  modelobjects.py
customerchurn/src/prediction/: preditionservice.py
customerchurn/tests/: test_data.py  test_model.py
