[project]
name = "customerchurn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imbalanced-learn==0.14",
    "jupyterlab==4.5.0",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "rich==14.2.0",
    "scikit-learn==1.7.2",
    "xgboost==3.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx==9.1.0",
]
